--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: webchatbot
+- name: crystal
   path: target/Chatbot-0.0.1.war
   buildpack: liberty-for-java
   env:
-    CONVERSATION_WORKSPACE_ID: 2e38d5ef-7506-4e38-804e-e83f3cbe6926
-    CAR_SERVICE_HOST: webchatbotcar.mybluemix.net
+    CONVERSATION_WORKSPACE_ID: 3072b753-5110-4831-90ab-50748440486c
+    CAR_SERVICE_HOST: crystal.mybluemix.net
