--- a/manifest.yml
+++ b/manifest.yml
@@ -5,4 +5,4 @@ applications:
   buildpack: liberty-for-java
   env:
     CONVERSATION_WORKSPACE_ID: 3072b753-5110-4831-90ab-50748440486c
-    CAR_SERVICE_HOST: crystal.mybluemix.net
+    CAR_SERVICE_HOST: durian.mybluemix.net
